# plasma-pstate

./: .gitignore  99-plasma-pstate  CMakeLists.txt  LICENSE.md  Messages.sh  README.md  install.sh  org.pkexec.set_prefs.policy  set_perfsd.service  uninstall.sh
gr.ictpro.jsalatas.plasma.pstate/: metadata.desktop
gr.ictpro.jsalatas.plasma.pstate/contents/code/: cpu.sh  dell_laptop.sh  intel.sh  lg_laptop.sh  nvidia.sh  set_prefs.sh  (+2 more)
gr.ictpro.jsalatas.plasma.pstate/translate/: hu_plasma_applet_gr.ictpro.jsalatas.plasma.pstate.po  template.pot
org.thefreecircle.mibofra.plasma.pstate/: metadata.desktop
src/: CMakeLists.txt  command_result.cpp  command_result.h  plasma_pstate.policy  pstate.cpp  pstate.h  set_prefs.cpp  set_prefs.h  sharedqueue.cpp  sharedqueue.h
src/package/: metadata.desktop
src/package/contents/code/: cpu.sh  datasource.js  dell_laptop.sh  intel.sh  nvidia.sh  profile.js  set_prefs.sh  sysfs_available.sh  utils.js
src/package/contents/config/: config.qml  main.xml
src/package/contents/ui/: AvailableValuesDS.qml  ComboBox.qml  CompactRepresentation.qml  FirstInit.qml  FullRepresentation.qml  Group.qml  Header.qml  NvidiaPowerMizerDS.qml  Profile.qml  ProfileManager.qml  PushButton.qml  Radio.qml  RwModeLabel.qml  SetPrefsManager.qml  Slider.qml  Switch.qml  TabbedRepresentation.qml  main.qml
src/package/contents/ui/DataSourceBackend/: AvailableValues.qml  Monitor.qml  Updater.qml
src/package/contents/ui/Model/: Profile.qml  ProfileManager.qml  Sensor.qml  SensorsManager.qml
src/package/contents/ui/NativeBackend/: Init.qml  Monitor.qml  Updater.qml
src/package/contents/ui/config/: ConfigGeneral.qml  IconPicker.qml
(+38 files in other folders)
